solved hacker rank problems